fixed explore page formatting/alignment

--- a/public/style.css
+++ b/public/style.css
@@ -59,6 +59,10 @@ form div {
   );
 }
 
+.indent {
+  margin-left: 48px;
+}
+
 .leaflet-container {
   margin-left: 4.1em;
   margin-bottom: 4.5em;
@@ -103,7 +107,7 @@ form div {
 
 /*isRedAndGreen circle*/
 #circle1:before {
-  content: '';
+  content: "";
   position: absolute;
   top: 5px;
   left: 5px;
@@ -119,7 +123,7 @@ form div {
 
 /*ACE7 circle*/
 #circle1:after {
-  content: '';
+  content: "";
   position: absolute;
   top: 15px;
   left: 15px;
@@ -151,7 +155,7 @@ form div {
 }
 /*GL circle*/
 #circle2:before {
-  content: '';
+  content: "";
   position: absolute;
   top: 5px;
   left: 5px;
